tests/fixtures/positive/naming/EnumNaming.kt
package com.example.naming

enum class Status {
    active,
    pending,
    inProgress
}
