tests/fixtures/negative/naming/EnumNaming.kt
package com.example.naming

enum class Status {
    ACTIVE,
    Done,
    InProgress
}
